--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@ckeditor/ckeditor5-build-classic": "^31.1.0",
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@hotwired/turbo": "^7.3.0",
+        "@popperjs/core": "^2.11.8",
         "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^2.7.3",
         "autonumeric": "^4.6.0",
