--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "laracasts/flash": "^3.2",
-        "laravel/cashier": "^14.7",
-        "laravel/framework": "^10.17",
+        "laravel/cashier": "^14.12",
+        "laravel/framework": "^10.40",
         "laravel/helpers": "^1.6",
-        "laravel/socialite": "^5.6",
+        "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
@@ -24,32 +24,43 @@
         "maatwebsite/excel": "^3.1",
         "magarrent/laravel-currency-formatter": "^1.0",
         "mariuzzo/laravel-js-localization": "^1.10",
+        "nunomaduro/termwind": "^1.13",
         "opcodesio/log-viewer": "^3.1",
         "pragmarx/countries": "^0.7.0",
         "rennokki/laravel-eloquent-query-cache": "^3.4",
         "spatie/laravel-cookie-consent": "^3.2",
-        "spatie/laravel-medialibrary": "^10.7",
-        "spatie/laravel-permission": "^5.8",
-        "spatie/schema-org": "^3.11",
+        "spatie/laravel-medialibrary": "^10.12",
+        "spatie/laravel-permission": "^5.11",
+        "spatie/laravel-ray": "^1.32",
+        "spatie/laravel-translatable": "^6.5",
+        "spatie/schema-org": "^3.14",
         "srmklive/paypal": "^3.0",
-        "tightenco/ziggy": "^1.4",
-        "unicodeveloper/laravel-paystack": "^1.1"
+        "tightenco/ziggy": "^1.6",
+        "unicodeveloper/laravel-paystack": "^1.1",
+        "psr/simple-cache": "^2.0|^3.0",
+        "ramsey/uuid": "^4.2.2",
+        "spatie/eloquent-sortable": "^4.0.1",
+        "spatie/laravel-honeypot": "^4.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
         "beyondcode/laravel-query-detector": "^1.7",
         "imanghafoori/laravel-microscope": "^1.0",
-        "mockery/mockery": "^1.4.4",
+        "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^9.5.10",
-        "fakerphp/faker": "^1.9.1",
+        "phpunit/phpunit": "^10.4",
+        "fakerphp/faker": "^1.23",
         "spatie/laravel-ignition": "^2.0"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
