--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.3",
         "guzzlehttp/guzzle": "^7.2",
         "laracasts/flash": "^3.2",
-        "laravel/cashier": "^14.12",
-        "laravel/framework": "^10.40",
+        "laravel/cashier": "^15.0",
+        "laravel/framework": "^12.0",
         "laravel/helpers": "^1.6",
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
@@ -24,20 +24,18 @@
         "maatwebsite/excel": "^3.1",
         "magarrent/laravel-currency-formatter": "^1.0",
         "mariuzzo/laravel-js-localization": "^1.10",
-        "nunomaduro/termwind": "^1.13",
+        "nunomaduro/termwind": "^2.0",
         "opcodesio/log-viewer": "^3.1",
         "pragmarx/countries": "^0.7.0",
         "rennokki/laravel-eloquent-query-cache": "^3.4",
         "spatie/laravel-cookie-consent": "^3.2",
-        "spatie/laravel-medialibrary": "^10.12",
-        "spatie/laravel-permission": "^5.11",
-        "spatie/laravel-ray": "^1.32",
+        "spatie/laravel-permission": "^6.0",
         "spatie/laravel-translatable": "^6.5",
         "spatie/schema-org": "^3.14",
         "srmklive/paypal": "^3.0",
-        "tightenco/ziggy": "^1.6",
+        "tightenco/ziggy": "^2.5",
         "unicodeveloper/laravel-paystack": "^1.1",
-        "psr/simple-cache": "^2.0|^3.0",
+        "psr/simple-cache": "^1.0|^2.0|^3.0",
         "ramsey/uuid": "^4.2.2",
         "spatie/eloquent-sortable": "^4.0.1",
         "spatie/laravel-honeypot": "^4.3"
@@ -48,10 +46,10 @@
         "beyondcode/laravel-query-detector": "^1.7",
         "imanghafoori/laravel-microscope": "^1.0",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.4",
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11.0",
         "fakerphp/faker": "^1.23",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.4"
     },
     "config": {
         "optimize-autoloader": true,
